--- a/css-basics/external.css
+++ b/css-basics/external.css
@@ -4,3 +4,8 @@
 #border-red {
     border: 1px solid rgb(255, 0, 55);
 }
+#text-with-img {
+    background-image: url("./bgimg.jpeg");
+    background-color: #cccccc;
+    color: blueviolet
+}
