UPDATE: homepage.css

--- a/css-basics/assignment/homepage.css
+++ b/css-basics/assignment/homepage.css
@@ -53,6 +53,9 @@ body {
   outline: white solid .5px;
   outline-offset: 5px;
 }
+.header .nav .menu ul li a:visited {
+  color: rgb(253, 207, 207);
+}
 .header .banner {
   text-align: center;
   margin: 10% auto;
